--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,29 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    //Circle Image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //Navigation
+    implementation "androidx.navigation:navigation-fragment:2.5.3"
+    implementation "androidx.navigation:navigation-ui:2.5.3"
+
+    //Room
+    implementation "androidx.room:room-runtime:2.5.2"
+    annotationProcessor "androidx.room:room-compiler:2.5.2"
+
+    //Json converter
+    implementation 'com.google.code.gson:gson:2.10'
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+
+    //Splash Screen
+    implementation 'androidx.core:core-splashscreen:1.0.1'
 
 
 
