--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     //Splash Screen
     implementation 'androidx.core:core-splashscreen:1.0.1'
 
+    //Lottie
+    implementation 'com.airbnb.android:lottie:6.1.0'
 
 
 }
