make as sign in with google

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,9 @@ dependencies {
     implementation("com.google.firebase:firebase-auth")
     implementation("com.google.firebase:firebase-firestore")
 
+
+    // google
+    implementation("com.google.android.gms:play-services-auth:20.7.0")
+
+
 }
