--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,11 @@ dependencies {
     implementation("com.google.android.gms:play-services-auth:20.7.0")
 
 
+     //RX java and android
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.6'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
+     // optional - RxJava3 support for Retrofit
+    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
+    // optional - RxJava3 support for Room
+    implementation "androidx.room:room-rxjava3:2.5.2"
 }
